--- a/src/pages/LandingPage.module.css
+++ b/src/pages/LandingPage.module.css
@@ -14,133 +14,6 @@ html {
   flex-direction: column;
   align-items: center;
 }
-/*-----------Header-----------*/
-.header {
-  width: 100%;
-  height: 100px;
-  background-color: #ffffff;
-  box-shadow: 0 3px 5px #00000029;
-  padding: 0 1.5rem;
-  position: sticky;
-  top: 0;
-  z-index: 50;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.container_header {
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  max-width: 1200px;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 60px;
-}
-
-.logo img {
-  width: 70px;
-  height: auto;
-}
-
-.logo p {
-  color: #243A76;
-  font-size: 25px;
-  font-family: 'Libre Baskerville', serif;
-}
-
-.nav_header {
-  background-color: #ffffff;
-  padding: 20px 0;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.nav_links {
-  list-style: none;
-  display: flex;
-  gap: 40px;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-}
-
-.nav_links li a {
-  text-decoration: none;
-  padding: 10px 15px;
-}
-
-.boton_header {
-  color: rgb(0, 0, 0);
-  font-size: 19px;
-  font-family: 'Playfair Display', serif;
-  cursor: pointer;
-  position: relative;
-  border: none;
-  background: none;
-  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition-duration: 400ms;
-  transition-property: color;
-}
-
-.boton_header:focus,
-.boton_header:hover {
-  color: #000000;
-}
-
-.boton_header:focus:after,
-.boton_header:hover:after {
-  width: 100%;
-  left: 0%;
-}
-
-.boton_header:after {
-  content: "";
-  pointer-events: none;
-  bottom: -2px;
-  left: 50%;
-  position: absolute;
-  width: 0%;
-  height: 1px;
-  background-color: #000000;
-  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition-duration: 400ms;
-  transition-property: width, left;
-}
-
-.boton_header_sesion{
-  font-family: 'Playfair Display', serif;
-  position: relative;
-  display: inline-block;
-  padding: 5px 15px;
-  text-align: center;
-  font-size: 19px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  color: #000000;
-  background: transparent;
-  cursor: pointer;
-  transition: ease-out 0.5s;
-  border: 2px solid #000000;
-  box-shadow: inset 0 0 0 0 #000000;
-}
-
-.boton_header_sesion:hover {
-  color: white;
-  box-shadow: inset 0 -100px 0 0 #000000;
-}
-
-.boton_header_sesion:active {
-  transform: scale(0.9);
-}
-
-/*-----------Fin Header-----------*/
 
 /*-----------Body-----------*/
 .body {
@@ -412,73 +285,6 @@ h1{
   color: #243A76;
   text-align: left;
 }
-
-.container_descripcion_servi{
-  height: 70%;
-  width: 80%;
-}
-
-.container_titulo_mas {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.subtitulo_servi {
-  font-size: 25px;
-  font-weight: 400;
-  text-align: left;
-  font-family: 'Playfair Display', serif;
-}
-
-.boton_mas {
-  background-color: transparent;
-  border: none;
-  box-shadow: none;
-  color: inherit;
-  cursor: pointer;
-}
-
-.linea_servi {
-  margin-top: 10px;
-  width: 100%;
-  border: 1px solid #219EBC;
-  transition: transform 0.7s ease;
-}
-
-.descripcion2_servi {
-  font-family: 'DM Sans', serif;
-  font-size: 15px;
-  color: #243A76;
-  text-align: left;
-  margin-top: 10px;
-}
-
-.texto_container {
-  overflow: hidden;
-  transition: height 1.0s ease, opacity 1.0s ease;
-  height: 0;
-  opacity: 0;
-}
-
-.texto_visible {
-  height: auto;
-  opacity: 1;
-}
-
-.texto_oculto {
-  height: 0;
-  opacity: 0;
-  transition: height 0.5s ease, opacity 0.5s ease;
-}
-
-.texto_visible + .linea_servi {
-  transform: translateY(5px);
-}
-
-.texto_oculto + .linea_servi {
-  transform: translateY(0);
-}
 /*-----------Fin Item 1-----------*/
 
 /*-----------Item 2-----------*/
@@ -722,7 +528,18 @@ h1{
   font-size: 15px;
   font-family: 'DM Sans', serif;
 }
-
+.nav_links_footer {
+  list-style: none;
+  display: flex;
+  gap: 40px;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+}
+.nav_links_footer li a {
+  text-decoration: none;
+  padding: 10px 15px; 
+}
 /*-----------Fin Footer-----------*/
 
 /*-----------Responsivo-----------*/
