Se conecta funcion de especializaciones

--- a/src/pages/psicologos/eliminados/styles.module.css
+++ b/src/pages/psicologos/eliminados/styles.module.css
@@ -161,3 +161,11 @@
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+.title{
+    color: #000000;
+    margin: 0;
+    font-family: 'DM Sans';
+    font-size: 27px;
+}
+
